clap_derive/tests/ui/skip_without_default.stderr
error[E0277]: the trait bound `Kind: std::default::Default` is not satisfied
  --> $DIR/skip_without_default.rs:22:12
   |
22 |     #[clap(skip)]
   |            ^^^^ the trait `std::default::Default` is not implemented for `Kind`
   |
   = note: required by `std::default::Default::default`

For more information about this error, try `rustc --explain E0277`.
